<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.b7anka.hollywoodtracker.Views.StarterViews.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_startFragment_to_homeActivity"
            app:destination="@id/homeActivity" />
        <action
            android:id="@+id/action_startFragment_to_fingerPrintFragment"
            app:destination="@id/fingerPrintFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.b7anka.hollywoodtracker.Views.Login.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_loginFragment_to_aboutFragment"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_loginFragment_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeActivity"
            app:destination="@id/homeActivity" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.b7anka.hollywoodtracker.Views.Register.RegisterFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.b7anka.hollywoodtracker.Views.About.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_addThumbnailFragment"
            app:destination="@id/addThumbnailFragment2"
            app:popUpTo="@+id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.b7anka.hollywoodtracker.Views.Settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.b7anka.hollywoodtracker.Views.Login.ForgotPasswordFragment"
        android:label="@string/forgot_Password_topbar"
        tools:layout="@layout/fragment_forgot_password" >
        <action
            android:id="@+id/action_forgotPasswordFragment_to_verifyCodeFragment"
            app:destination="@id/verifyCodeFragment"
            app:popUpTo="@+id/forgotPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/verifyCodeFragment"
        android:name="com.b7anka.hollywoodtracker.Views.Login.VerifyCodeFragment"
        android:label="@string/verify_code"
        tools:layout="@layout/fragment_verify_code" >
        <action
            android:id="@+id/action_verifyCodeFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment"
            app:popUpTo="@+id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.b7anka.hollywoodtracker.Views.Login.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />
    <activity
        android:id="@+id/homeActivity"
        android:name="com.b7anka.hollywoodtracker.Activities.HomeActivity"
        android:label="activity_home"
        tools:layout="@layout/activity_home" />
    <fragment
        android:id="@+id/fingerPrintFragment"
        android:name="com.b7anka.hollywoodtracker.Views.Login.FingerPrintFragment"
        android:label="@string/login_button"
        tools:layout="@layout/fragment_finger_print" >
        <action
            android:id="@+id/action_fingerPrintFragment_to_homeActivity"
            app:destination="@id/homeActivity" />
    </fragment>
    <fragment
        android:id="@+id/addThumbnailFragment2"
        android:name="com.b7anka.hollywoodtracker.Views.AddThumbnail.AddThumbnailFragment"
        android:label="@string/upload_a_thumbnail"
        tools:layout="@layout/fragment_add_thumbnail" />
</navigation>