<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Register.RegisterFragment">


    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="200dp"

        android:layout_gravity="center"
        android:src="@mipmap/ic_default_avatar_foreground" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:text="@string/tap_image_to_change_it"/>

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/username_register"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/showPasswordsRegisterCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/show_passwords"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>