<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Profile.ChangePasswordFromProfileFragment">

    <EditText
        android:id="@+id/currentPasswordEditText"
        android:hint="@string/current_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/newPasswordProfileEditText"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/repeatNewPasswordProfileEditText"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/showPasswordsCheckBox"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_passwords"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/changePasswordProfileButton"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/change_password"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_marginBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>