<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".Views.Login.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:hint="@string/username_login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:hint="@string/password_login"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/rememberMeSwitch"
                android:text="@string/remember_me"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/showPasswordCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/show_password" />

        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassWordTextView"
            android:layout_width="match_parent"
            android:text="@string/forgot_Password"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/icons"
            android:layout_marginRight="40dp"
            android:text="@string/login_button"
            />

    <Button
        android:id="@+id/signInWithGoogleButton"
        android:text="@string/login_with_google_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:padding="10dp"
        android:visibility="visible"
        android:layout_marginEnd="40dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:layout_marginBottom="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


</LinearLayout>
