<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Login.VerifyCodeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/code_not_case_sensitive"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/verifyCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/enter_code_from_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/verify_code"
        android:layout_height="wrap_content" />


</LinearLayout>